# my-math-app

./: .gitignore  CMakeLists.txt  MyMathAppConfig.h.in  README.md  mymathapp.cpp
MathFunctions/: CMakeLists.txt  mysqrt.cpp
